--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /.openshift_install.log
 /.openshift_install_state.json
 /ssh-key/
+/ignition-overrides/bootstrap-in-place-for-live-iso.ign
+/ignition-overrides/complete-installation.sh
