Updated repo to use the latest bootstrap in place deployment flow Updated release image Added BootstrapInPlace configuration to install-config.yaml.template Updated Makefile to render the installation disk in the install-config.yaml Removed ignition-overrides Updated README.md

--- a/install-config.yaml.template
+++ b/install-config.yaml.template
@@ -26,6 +26,8 @@ networking:
   - 172.30.0.0/16
 platform:
   none: {}
+BootstrapInPlace:
+  InstallationDisk: INSTALLATION_DISK
 publish: External
 pullSecret: |
         YOUR_PULL_SECRET
