Add option to add custom manifests
Also added makefile target to dump ignition into a directory so it can
be inspected.

Also made registry-config.json .PHONY because it was really annoying to
change the pull secret and have those changes ignored. This is at the
cost of waiting 5 seconds for the installer to get pulled out of the
image each time, I think it's worth it though.

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
-/install-config.yaml
-/*.iso
-/net.xml
+/bin/
+/.dns_changes_confirmed
 /gathered/
-/sno-workdir
-/nohup.out
-/installer/
-/log-bundle*
-/.openshift_install.log
-/.openshift_install_state.json
-/ssh-key/
 /ignition-overrides/bootstrap-in-place-for-live-iso.ign
 /ignition-overrides/complete-installation.sh
-/.dns_changes_confirmed
-/bin/
+/ign-root/
+/install-config.yaml
+/installer/
+/*.iso
+/log-bundle*
+/net.xml
+/nohup.out
+/.openshift_install.log
+/.openshift_install_state.json
 /registry-config.json
+/sno-workdir
+/ssh-key/
