Make the k8s cluster service netork settable via $CLUSTER_SVC_NETWORK

--- a/install-config.yaml.template
+++ b/install-config.yaml.template
@@ -23,7 +23,7 @@ networking:
   - cidr: 192.168.126.0/24
   networkType: OpenShiftSDN
   serviceNetwork:
-  - 172.30.0.0/16
+  - CLUSTER_SVC_NETWORK
 platform:
   none: {}
 BootstrapInPlace:
