--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@
 /registry-config.json
 /sno-workdir
 /ssh-key/
+/.idea/
+/terraform/*/.terraform/
+/terraform/*/vsphere-vars.tf
+/terraform/*/.terraform*lock*
+/terraform/*/terraform.tfstate*
