Switch to OVNKubernetes
Since OCP 4.10, OpenShiftSDN is no longer supported on SNO.
Switch to OVNKubernetes.

Other changes:
  - bump to the latest available 4.11 life ISO base image
  - bump the RELEASE_IMAGE

--- a/install-config.yaml.template
+++ b/install-config.yaml.template
@@ -21,7 +21,7 @@ networking:
     hostPrefix: 23
   machineNetwork:
   - cidr: MACHINE_NETWORK
-  networkType: OpenShiftSDN
+  networkType: OVNKubernetes
   serviceNetwork:
   - CLUSTER_SVC_NETWORK
 platform:
