--- a/install-config.yaml.template
+++ b/install-config.yaml.template
@@ -1,5 +1,5 @@
 apiVersion: v1
-baseDomain: redhat.com
+baseDomain: BASE_DOMAIN
 compute:
 - architecture: amd64
   hyperthreading: Enabled
@@ -14,7 +14,7 @@ controlPlane:
   replicas: 1
 metadata:
   creationTimestamp: null
-  name: test-cluster
+  name: CLUSTER_NAME
 networking:
   clusterNetwork:
   - cidr: CLUSTER_NETWORK
